Use Google blue/red 600 for avatar error states

Aligns values used for text with the ones requested by the spec.

Bug: chromium:863586
Change-Id: I0e9b4c32bd672e38ab2b6a7831fc62fdefe0f650
Reviewed-on: https://chromium-review.googlesource.com/1141359
Commit-Queue: Bret Sepulveda <bsep@chromium.org>
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Cr-Commit-Position: refs/heads/master@{#576149}
Former-commit-id: 26723c8e856a06d2e727f27803739da0f8467201